--- a/AmericanSingLanguage/app/src/main/res/values/strings.xml
+++ b/AmericanSingLanguage/app/src/main/res/values/strings.xml
@@ -5,4 +5,38 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="my_big_string">Twinkle, twinkle, little star,
+    How I wonder what you are.
+    Up above the world so high,
+    Like a diamond in the sky.
+
+    When the blazing sun is gone,
+    When he nothing shines upon,
+    Then you show your little light,
+    Twinkle, twinkle, all the night.
+
+    Then the traveler in the dark,
+    Thanks you for your tiny spark,
+    He could not see which way to go,
+    If you did not twinkle so.
+
+    In the dark blue sky you keep,
+    And often through my curtains peep,
+    For you never shut your eye,
+    Till the sun is in the sky.
+
+    As your bright and tiny spark,
+    Lights the traveler in the dark.
+    Though I know not what you are,
+    Twinkle, twinkle, little star.
+
+    Twinkle, twinkle, little star.
+    How I wonder what you are.
+    Up above the world so high,
+    Like a diamond in the sky.
+
+    Twinkle, twinkle, little star.
+    How I wonder what you are.
+    How I wonder what you are.</string>
+
 </resources>
