--- a/AmericanSingLanguage/app/src/main/res/values/strings.xml
+++ b/AmericanSingLanguage/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="my_big_string">
+    <string name="twinkle_twinkle_little_star">
         Twinkle, twinkle, little star,
         How I wonder what you are!
         Up above the world so high,
